--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,27 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <title>TinyApp</title>
-</head>
-<body>
-    <!-- Add your EJS code here -->
-    <ul>
-      <% for(var attribute in urls){ %>
-        <li><%- attribute %> - <%- urls[attribute]%> </li> 
-  
-       
-       <form  method="GET" action="/urls/<%= attribute %>/">    
-       <input type="submit" value="Edit">
-       </form>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
-      <form  method="POST" action="/urls/<%= attribute %>/delete">    
-       <input type="submit" value="Delete">
-    </form>
-      <%}%>
-             </ul>
-</body>
-</html>
-
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+    <title>TinyApp</title>
+  </head>
 
     
+  <body>
+    <main style="margin: 1em;">
+      <h3>My URLs</h3>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Short URL ID</th>         
+            <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% for (let id in urls) { %>
+            <tr>
+              <td><a href="/u/<%= id %>"><%= id %></a></td>
+              <td><a href="<%= urls[id].LongURL %>"><%= urls[id].LongURL %></a></td>
+              <form method="GET" action="/urls/<%= id %>/edit">
+                <td><button type="submit" class="btn btn-outline-danger">Edit</button></td>
+              </form>
+              <form method="POST" action="/urls/<%= id %>/delete">
+                <td><button type="submit" class="btn btn-outline-danger">Delete</button></td>
+              </form>
+            </tr>
+          <% } %>
+        </tbody>
+      </table>
+    </main>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
+</html>
